<resources>
    <string name="action_settings">Settings</string>
    <string name="settings_search">Search Filter</string>
    <string name="app_name">GridImageSearch</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="label_title">Image Title</string>
    <string name="title_search">Advanced search options</string>
    <string name="labelImageSize">Image Size</string>
    <string name="labelColorFilter">Color Filter</string>
    <string name="labelImageType">Image Type</string>
    <string name="labelSiteFilter">Site Filter</string>
    <string name="labelSaveButton">Save</string>
    <string name="labelResetButton">Reset</string>
    <string name="labelCancelButton">Cancel</string>
    <string name="prompt_imageSize">Select a size</string>
    <string-array name="imageSize_arrays">
        <item></item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
    </string-array>
    <string name="prompt_imageColor">Select a Color</string>
    <string-array name="imageColor_arrays">
        <item></item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string name="prompt_imageType">Select a Type</string>
    <string name="hint_siteFilter">Type a Site e.g. yahoo.com</string>
    <string-array name="imageType_arrays">
        <item></item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
