<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.walmart.gridimagesearch.activities.SearchFilterActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_search"
        android:id="@+id/tvSearchTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="8"
        android:layout_below="@id/tvSearchTitle"
        android:layout_marginTop="30dp"
        android:id="@+id/glInput">

        <!--ImageSize-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelImageSize"
            android:id="@+id/labelImageSize"
            android:layout_row="0"
            android:layout_column="0"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageSize"
            android:layout_row="0"
            android:layout_column="1"
            android:entries="@array/imageSize_arrays"/>

        <!--Color Filter-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelColorFilter"
            android:id="@+id/labelColorFilter"
            android:layout_row="1"
            android:layout_column="0"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spColorFilter"
            android:layout_row="1"
            android:layout_column="1"
            android:entries="@array/imageColor_arrays"
            />

        <!--Image Type-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelImageType"
            android:id="@+id/labelImageType"
            android:layout_row="2"
            android:layout_column="0"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spImageType"
            android:layout_row="2"
            android:layout_column="1"
            android:entries="@array/imageType_arrays"
            />

        <!--Site  Filter-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSiteFilter"
            android:id="@+id/labelSiteFilter"
            android:layout_row="3"
            android:layout_column="0"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edSiteFilter"
            android:layout_row="3"
            android:layout_column="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelSaveButton"
            android:id="@+id/btnSave"
            android:layout_row="5"
            android:layout_columnSpan="1"

        />


    </GridLayout>


</RelativeLayout>